// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUpdateRoutingConfig schema snapshot full error 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "campaignId"
    ],
    "message": "Invalid input: expected string, received undefined"
  },
  {
    "expected": "array",
    "code": "invalid_type",
    "path": [
      "cascade"
    ],
    "message": "Invalid input: expected array, received undefined"
  },
  {
    "expected": "array",
    "code": "invalid_type",
    "path": [
      "cascadeGroupOverrides"
    ],
    "message": "Invalid input: expected array, received undefined"
  },
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "name"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`RoutingConfig schema snapshot full error 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "campaignId"
    ],
    "message": "Invalid input: expected string, received undefined"
  },
  {
    "expected": "array",
    "code": "invalid_type",
    "path": [
      "cascade"
    ],
    "message": "Invalid input: expected array, received undefined"
  },
  {
    "expected": "array",
    "code": "invalid_type",
    "path": [
      "cascadeGroupOverrides"
    ],
    "message": "Invalid input: expected array, received undefined"
  },
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "name"
    ],
    "message": "Invalid input: expected string, received undefined"
  },
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "clientId"
    ],
    "message": "Invalid input: expected string, received undefined"
  },
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "id"
    ],
    "message": "Invalid input: expected string, received undefined"
  },
  {
    "code": "invalid_value",
    "values": [
      "COMPLETED",
      "DELETED",
      "DRAFT"
    ],
    "path": [
      "status"
    ],
    "message": "Invalid option: expected one of \\"COMPLETED\\"|\\"DELETED\\"|\\"DRAFT\\""
  },
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "createdAt"
    ],
    "message": "Invalid input: expected string, received undefined"
  },
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "updatedAt"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;
